# crypto-data-benchmark

./: .envrc  README.md  pyproject.toml
scripts/: run.py
src/crypto_data_benchmark/: scalene_profiler.py
src/crypto_data_benchmark/data/: usdt_transfers.py
src/crypto_data_benchmark/dbs/: clickhouse_provider.py  common.py  deltalake_provider.py  duckdb_provider.py  lancedb_provider.py  parquet_provider.py  polars_provider.py  sqlite_provider.py  tiledb_provider.py
tests/: test_scalene_profiler.py
